--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -19,6 +19,7 @@
         height: 100%;
 
         li {
+            margin-bottom: 0;
             list-style: none;
             display: flex;
             justify-content: center;
