--- a/src/index.scss
+++ b/src/index.scss
@@ -22,12 +22,40 @@ body * {
   direction: rtl;
 
   background-color: var(--background-color);
+  font-size: 1em;
+  box-sizing: border-box;
 }
 
-// #root{
-//   margin-top: 65px;
-// }
+#root {
+  // margin-top: 65px;
+}
 
+.main-content {
+  margin: 0% 15%;
+  // display: grid;
+  // grid-template-columns:repeat(12,1fr);
+  // gap: 3em;
+}
+
+
+h1,h2,p,ul,li{
+  margin-bottom: .5em;
+  text-align: justify;
+}
+
+h1{
+  text-decoration: underline;
+  font-size: 1.5em;
+}
+h2{
+  font-size: 1.25em;
+}
+ul{
+  list-style-type: none;
+}
+p,li{
+  font-size: .75em;
+}
 // ::-webkit-scrollbar {
 //   display: none;
 // }
