--- a/src/index.scss
+++ b/src/index.scss
@@ -1,15 +1,20 @@
 :root {
   font-size: clamp(20px, 5vw, 40px);
   display: flex;
-  width: 100vw !important;
 
   --primary-color: #555555;
   --secondary-color: #777777;
   --accent-color: #999999;
   --background-color: #E0E0E0;
 
+  --primary-color: #2A7FBD  ;
+  --secondary-color: #3498DB ;
+  --accent-color: #999999;
+  --background-color: #F4F7F9 ;
+
   --soft-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   --bold-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
 }
 
 html,
@@ -23,7 +28,13 @@ body * {
 
   background-color: var(--background-color);
   font-size: 1em;
-  box-sizing: border-box;
+  color: #2C3E50;
+}
+
+body {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 #root {
@@ -38,24 +49,38 @@ body * {
 }
 
 
-h1,h2,p,ul,li{
+h1,
+h2,
+p,
+ul,
+li {
   margin-bottom: .5em;
   text-align: justify;
 }
 
-h1{
+h1 {
   text-decoration: underline;
-  font-size: 1.5em;
+  font-size: 1em;
 }
-h2{
-  font-size: 1.25em;
-}
-ul{
-  list-style-type: none;
-}
-p,li{
+
+h2 {
   font-size: .75em;
 }
+
+ul {
+  list-style-type: none;
+}
+
+p,
+li {
+  font-size: .5em;
+}
+
+footer{
+  margin-top: 1.5em;
+  font-size: .5em;
+}
+
 // ::-webkit-scrollbar {
 //   display: none;
 // }
