--- a/src/Components/ContactsForm/Contact.scss
+++ b/src/Components/ContactsForm/Contact.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     font-size: .75em;
+    width: 100%;
 
     h2 {
         margin: 1em 0;
@@ -17,6 +18,7 @@
 
     .inputs-container {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-evenly;
         margin-bottom: 1em;
         background-color: var(--secondary-color);
