--- a/src/index.scss
+++ b/src/index.scss
@@ -7,10 +7,10 @@
   --accent-color: #999999;
   --background-color: #E0E0E0;
 
-  --primary-color: #2A7FBD  ;
-  --secondary-color: #3498DB ;
+  --primary-color: #2A7FBD;
+  --secondary-color: #3498DB;
   --accent-color: #999999;
-  --background-color: #F4F7F9 ;
+  --background-color: #F4F7F9;
 
   --soft-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   --bold-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -43,6 +43,12 @@ body {
 
 .main-content {
   margin: 0% 15%;
+
+  header {
+    background-color: transparent;
+    margin: 1.5em 0 1em;
+  }
+
   // display: grid;
   // grid-template-columns:repeat(12,1fr);
   // gap: 3em;
@@ -76,7 +82,7 @@ li {
   font-size: .5em;
 }
 
-footer{
+footer {
   margin-top: 1.5em;
   font-size: .5em;
 }
