--- a/src/Components/ContactsForm/Contact.scss
+++ b/src/Components/ContactsForm/Contact.scss
@@ -14,6 +14,14 @@
         background-color: var(--secondary-color);
     }
 
+    p{
+        text-align: center;
+        font-size: 1em;
+        background-color: var(--secondary-color);
+        color: var(--background-color);
+        margin-bottom: 3em;
+    }
+
     .inputs-container {
         display: flex;
         flex-wrap: wrap;
