--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -43,7 +43,7 @@
 
             a {
                 height: 100%;
-                width: 100%;
+                width: fit-content;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -57,6 +57,7 @@
                 &:hover {
                     background-color: var(--primary-color);
                     color: var(--background-color);
+                    cursor: pointer;
                 }
             }
         }
@@ -85,6 +86,14 @@
                     display: inline-block;
                     height: 65px;
                     margin-left: auto;
+                    background-color: transparent;
+
+                    a {
+                        img {
+                            background-color: transparent;
+                            height: 40px;
+                        }
+                    }
                 }
 
                 &.logo {
@@ -114,6 +123,7 @@
                         height: 65px;
                         font-size: 3em;
                         justify-content: flex-start;
+                        width: 100%;
                     }
                 }
             }
